# C-Frost

./: .gitignore  INSTALLATION.md  README.md
Examples/: README.md
Examples/NLPExample/: .gitignore  CMakeLists.txt  README.md  create_problem.m  ipopt.opt
Examples/RabbitExample/: .gitignore  ipopt.opt  main_opt.m  output.jsoncd
Linux/: .gitignore  Makefile
Linux/include/frost/: Document.h  IpoptProblem.h  JacGEvalAbstract.h  JacGEvalMultiThread.h  JacGEvalSingleThread.h
Linux/src/: IpoptProblem.cpp  JacGEvalMultiThread.cpp  JacGEvalSingleThread.cpp  main.cpp
Matlab/: .gitignore
Matlab/+frost_c/: createBoundsFile.m  createConstraints.m  createDataFile.m  createFunctionListHeader.m  createIncludeHeader.m  createInitialGuess.m  createObjectives.asv  createObjectives.m  formulateBounds.m  formulateProblemStructure.m  getAllFuncs.m
Matlab/Cassie/c_code/: .gitignore  CMakeLists.txt  ipopt.opt
Matlab/NLPExample/: .gitignore  nlp_example051.m
Matlab/RabbitExample/: .gitignore  CMakeLists.txt  MakefileSample  ipopt_constraint.mat  ipopt_gradient.mat  ipopt_jacobian.mat  main_opt.m  nlp_example051.m
Matlab/RabbitExample/+frost_c/: createFunctionListHeader.m  createIncludeHeader.m  createJSONFile.m  generateFunctions.m  generateProblemStructure.m  getAllFuncs.m  getRootPath.m
Matlab/res/: templateMin.c  templateMin.h
VS Project/C_Frost/: C_Frost.sln
VS Project/C_Frost/C_Frost/: C_Frost.vcxproj  C_Frost.vcxproj.filters  IpoptProblem.cpp  main.cpp
VS Project/C_Frost/C_Frost/include/frost/: IpoptProblem.h
